@@ -5,6 +5,8 @@ Version 11
   you will get to use when you eventually get back to where you were originally
   knocked-down.
 
+--Powers are sorted with strongest to the right whenever they are passed upwards to encourage additional pick-ups (which will replace weakest powers on left).
+
 
 
 
